--- a/index.html
+++ b/index.html
@@ -7,17 +7,116 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class="container">
     <div class="navbar">
-    <div class="brand">E-Shopify</div>
+    <div class="brand"><h1>E-Shopify</h1></div>
     <nav>
         <ul>
             <li><a href="#">Home</a></li>
-            <li><a href="#">Products</a></li>
-            <li><a href="#">About</a></li>
+            <li><a href="#products-tab">Products</a></li>
+            <li><a href="about.html">About</a></li>
             
         </ul>
+        <div class="menu-toggle">☰</div>
     </nav>
     </div>
-    
+    <div class="image-container">
+       <img src="images/hero.jpg" alt="Hero Image">
+        <div class="overlay-text">
+            <h1>Welcome to E-Shopify</h1>
+            <p>Your go to electronic store</p>
+            <a href="#products-tab" class="btn">Explore Now </a>
+        </div>
+    </div>
+    </div>
+
+    <!-- featured products -->
+    <div class="categories" id="products-tab">
+        <h2 class="section-title"><a href="#">Featured Products</a></h2>
+        <div class="cat-row">
+                <div class="col-3">
+                    <div class="product-container">
+                        <div class="product-image">
+                <img src="images/display image.jpg" alt="">
+                </div>
+                <div class="product-info">
+                <h3>Name</h3>
+                <p class="product-description">this product is for ....</p>
+                <p class="price">5000/=</p>
+                <a href="#" class="price-btn">    View details </a>
+                </div>
+                    </div>
+                </div>
+            <div class="col-3">
+                <div class="product-container">
+                    <div class="product-image">
+            <img src="images/display image.jpg" alt="">
+            </div>
+            <div class="product-info">
+            <h3>Name</h3>
+            <p class="product-description">this product is for ....</p>
+            <p class="price">5000/=</p>
+            <a href="#" class="price-btn">    View details </a>
+            </div>
+                </div>
+            </div>
+            <div class="col-3">
+                <div class="product-container">
+                    <div class="product-image">
+            <img src="images/display image.jpg" alt="">
+            </div>
+            <div class="product-info">
+            <h3>Name</h3>
+            <p class="product-description">this product is for ....</p>
+            <p class="price">5000/=</p>
+            <a href="#" class="price-btn">    View details </a>
+            </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="more-products">
+        <h2 class="section-title">More Products</h3>
+    <div class="cat-row">
+        <div class="col-3">
+            <div class="product-container">
+                <div class="product-image">
+                <img src="images/display image.jpg" alt="">
+            </div>
+            </div>
+            <div class="product-info">
+                <h3>Name</h3>
+                <p class="product-description">this product is for ....</p>
+                <p class="price">5000/=</p>
+                <a href="#" class="price-btn">    View details </a>
+            </div>
+        </div>
+        <div class="col-3">
+            <div class="product-container">
+                <div class="product-image">
+                <img src="images/display image.jpg" alt="">
+            </div>
+            </div>
+            <div class="product-info">
+                <h3>Name</h3>
+                <p class="product-description">this product is for ....</p>
+                <p class="price">5000/=</p>
+                <a href="#" class="price-btn">    View details </a>
+            </div>
+        </div> <div class="col-3">
+            <div class="product-container">
+                <div class="product-image">
+                <img src="images/display image.jpg" alt="">
+            </div>
+            </div>
+            <div class="product-info">
+                <h3>Name</h3>
+                <p class="product-description">this product is for ....</p>
+                <p class="price">5000/=</p>
+                <a href="#" class="price-btn">    View details </a>
+            </div>
+        </div>
+    </div>
+    </div>
 </body>
 </html>
