--- a/index.html
+++ b/index.html
@@ -117,6 +117,166 @@
             </div>
         </div>
     </div>
+     <div class="more-products">
+        <h2 class="section-title">More Products</h3>
+    <div class="cat-row">
+        <div class="col-3">
+            <div class="product-container">
+                <div class="product-image">
+                <img src="images/display image.jpg" alt="">
+            </div>
+            </div>
+            <div class="product-info">
+                <h3>Name</h3>
+                <p class="product-description">this product is for ....</p>
+                <p class="price">5000/=</p>
+                <a href="#" class="price-btn">    View details </a>
+            </div>
+        </div>
+        <div class="col-3">
+            <div class="product-container">
+                <div class="product-image">
+                <img src="images/display image.jpg" alt="">
+            </div>
+            </div>
+            <div class="product-info">
+                <h3>Name</h3>
+                <p class="product-description">this product is for ....</p>
+                <p class="price">5000/=</p>
+                <a href="#" class="price-btn">    View details </a>
+            </div>
+        </div> <div class="col-3">
+            <div class="product-container">
+                <div class="product-image">
+                <img src="images/display image.jpg" alt="">
+            </div>
+            </div>
+            <div class="product-info">
+                <h3>Name</h3>
+                <p class="product-description">this product is for ....</p>
+                <p class="price">5000/=</p>
+                <a href="#" class="price-btn">    View details </a>
+            </div>
+        </div>
     </div>
+    </div>
+    <div class="more-products">
+        <h2 class="section-title">More Products</h3>
+    <div class="cat-row">
+        <div class="col-3">
+            <div class="product-container">
+                <div class="product-image">
+                <img src="images/display image.jpg" alt="">
+            </div>
+            </div>
+            <div class="product-info">
+                <h3>Name</h3>
+                <p class="product-description">this product is for ....</p>
+                <p class="price">5000/=</p>
+                <a href="#" class="price-btn">    View details </a>
+            </div>
+        </div>
+        <div class="col-3">
+            <div class="product-container">
+                <div class="product-image">
+                <img src="images/display image.jpg" alt="">
+            </div>
+            </div>
+            <div class="product-info">
+                <h3>Name</h3>
+                <p class="product-description">this product is for ....</p>
+                <p class="price">5000/=</p>
+                <a href="#" class="price-btn">    View details </a>
+            </div>
+        </div> <div class="col-3">
+            <div class="product-container">
+                <div class="product-image">
+                <img src="images/display image.jpg" alt="">
+            </div>
+            </div>
+            <div class="product-info">
+                <h3>Name</h3>
+                <p class="product-description">this product is for ....</p>
+                <p class="price">5000/=</p>
+                <a href="#" class="price-btn">    View details </a>
+            </div>
+        </div>
+    </div>
+    </div>
+    <div class="more-products">
+        <h2 class="section-title">More Products</h3>
+    <div class="cat-row">
+        <div class="col-3">
+            <div class="product-container">
+                <div class="product-image">
+                <img src="images/display image.jpg" alt="">
+            </div>
+            </div>
+            <div class="product-info">
+                <h3>Name</h3>
+                <p class="product-description">this product is for ....</p>
+                <p class="price">5000/=</p>
+                <a href="#" class="price-btn">    View details </a>
+            </div>
+        </div>
+        <div class="col-3">
+            <div class="product-container">
+                <div class="product-image">
+                <img src="images/display image.jpg" alt="">
+            </div>
+            </div>
+            <div class="product-info">
+                <h3>Name</h3>
+                <p class="product-description">this product is for ....</p>
+                <p class="price">5000/=</p>
+                <a href="#" class="price-btn">    View details </a>
+            </div>
+        </div> <div class="col-3">
+            <div class="product-container">
+                <div class="product-image">
+                <img src="images/display image.jpg" alt="">
+            </div>
+            </div>
+            <div class="product-info">
+                <h3>Name</h3>
+                <p class="product-description">this product is for ....</p>
+                <p class="price">5000/=</p>
+                <a href="#" class="price-btn">    View details </a>
+            </div>
+        </div>
+    </div>
+    </div>
+    <footer>
+        <div class="footer-content">
+            <div class="footer-section">
+                <h3>E-Shopify</h3>
+                <p>Your go-to electronic store for quality products and exceptional service.</p>
+            </div>
+            <div class="footer-section">
+                <h3>Quick Links</h3>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="index.html#products-tab">Products</a></li>
+                    <li><a href="about.html">About</a></li>
+                </ul>
+            </div>
+            <div class="footer-section">
+                <h3>Connect With Us</h3>
+                <div class="social-links">
+                    <a href="#">Facebook</a>
+                    <a href="#">Twitter</a>
+                    <a href="#">Instagram</a>
+                </div>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <p>&copy; 2025 E-Shopify. All rights reserved.</p>
+        </div>
+    </footer>
+    <script>
+        document.querySelector('.menu-toggle').addEventListener('click', function() {
+            document.querySelector('nav ul').classList.toggle('active');
+        });
+    </script>
 </body>
 </html>
